# transit-foundation-model

./: .gitignore  README.md  pyproject.toml
app/: __init__.py
app/api/: Dockerfile  __init__.py  feed_explorer.py  main.py  requirements.txt
app/web/: package-lock.json  package.json  tailwind.config.ts
app/web/src/app/: globals.css  layout.tsx  page.tsx
app/web/src/components/: ChatTab.tsx  ExplorerTab.tsx  FeedDashboard.tsx
app/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx
app/web/src/lib/: api.ts  demo-feed.ts  types.ts
datasets/catalog/: seed_feeds.json
datasets/synthetic/: test.jsonl  train.jsonl
deploy/: deploy_backend.sh
deploy/hf-space/: README.md  app.py  requirements.txt
docs/: GUIDE.md  HF_FORUM_POST.md  MODEL_CARD.md  ORACLE_DEPLOYMENT.md
evaluation/: benchmark.json  benchmark_eval_colab.ipynb  benchmark_generator.py  benchmark_v1_colab.ipynb  evaluate.py  evaluate_umartransit.ipynb  metrics.py  results.md
inference/: __init__.py  export_gguf.ipynb  run_local.py
instructions/context/: UmarTransit_Master_Claude_Prompt.md
notebooks/: 01_explore_catalog.ipynb
scripts/: __init__.py  catalog_builder.py  check_stats.py  clean_all_feeds.py  clean_feed.py  config.py  download_feeds.py  expanded_pairs.py  feed_selector.py  generate_model_card.py  generate_synthetic_dataset.py  gtfs_schema.py  model_config.py  precompute_feed_stats.py  push_dataset_to_hub.py  question_templates.py  validate_dataset.py  validate_feed.py
training/: train_umartransit.ipynb  train_umartransit_v1.ipynb
