[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umartransit"
version = "0.1.0"
description = "A domain-specific foundation model for public transit systems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "umarfarookm", email = "umarfarook89@gmail.com" },
]

dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "tqdm>=4.65",
    "pydantic>=2.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "ipykernel>=6.0",
]

[project.scripts]
umartransit-download = "scripts.download_feeds:main"

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
